name:                cabal-helper
version:             0.1.0.1
synopsis:            Simple interface to Cabal's configuration state used by ghc-mod
description:
    @cabal-helper@ provides a library which wraps the internal use of executables
    to lift the restrictions imposed by linking against versions of GHC before
    @7.10@.

    @cabal-helper@ uses a wrapper executable to compile the actual cabal-helper
    executable at runtime while linking against an arbitrary version of
    Cabal. This runtime-compiled helper executable is then used to extract
    various bits and peices from Cabal on disk state (dist/setup-config) written
    by it's configure command.

    In addition to this the wrapper executable also supports installing any
    version of Cabal from hackage in case it cannot be found in any available
    package database. The wrapper installs these instances of the Cabal library
    into a private package database so as to not interfere with the user's
    packages.

    Furthermore the wrapper supports one special case namely reading a state
    file for Cabal itself. This is needed as Cabal compiles it's Setup.hs using
    itself and not using any version of Cabal installed in any package database.

    Currently @cabal-helper@ supports @Cabal >= 1.16@.

license:             AGPL-3
license-file:        LICENSE
author:              Daniel Gröber <dxld@darkboxed.org>
maintainer:          dxld@darkboxed.org
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CabalHelper/Main.hs

source-repository head
  type:     git
  location: https://github.com/DanielG/cabal-helper.git

library
  exposed-modules:     Distribution.Helper
  build-depends:       base >= 4.5 && < 5
  default-language:    Haskell2010
  Build-Depends:       base
                     , data-default
                     , directory
                     , filepath
                     , transformers
                     , mtl
                     , process

Executable cabal-helper-wrapper
  Default-Language:    Haskell2010
  Other-Extensions:    TemplateHaskell
  Main-Is:             CabalHelper/Wrapper.hs
  Other-Modules:       Paths_cabal_helper
                       CabalHelper.Types
                       CabalHelper.Common
                       CabalHelper.GuessGhc
                       CabalHelper.Data
  GHC-Options:         -Wall
  X-Install-Target:    $libexecdir
  Build-Depends:       base >= 4.5 && < 5
                     , bytestring
                     , Cabal
                     , directory
                     , filepath
                     , process
                     , transformers
                     , template-haskell
                     , temporary
