name:                exeintlib
version:             0
build-type:          Simple
cabal-version:       >=2.0

library
  exposed-modules:     Lib
  hs-source-dirs:      lib
  build-depends:       base, filepath, intlib
  default-language:    Haskell2010

library intlib
  exposed-modules:     IntLib
  hs-source-dirs:      intlib
  build-depends:       base, directory
  default-language:    Haskell2010

executable exe
  main-is:             Exe.hs
  build-depends:       base, exeintlib
  default-language:    Haskell2010