name:                src-repo
version:             0
build-type:          Simple
cabal-version:       >=1.10

executable src-repo
  main-is:             Exe.hs
  build-depends:       base, exelib
  default-language:    Haskell2010

test-suite exe-test
    type:              exitcode-stdio-1.0
    main-is:           Exe.hs
    build-depends:     base, exelib

benchmark exe-bench
    type:              exitcode-stdio-1.0
    main-is:           Exe.hs
    build-depends:     base, exelib
