name:                pkg-oot
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Lib
  build-depends:     base, filepath, directory 
  default-language:  Haskell2010

executable pkg-oot-exe
  main-is:           Exe.hs
  build-depends:     base, pkg-oot 
  default-language:  Haskell2010

test-suite pkg-oot-test
  type:              exitcode-stdio-1.0
  main-is:           Exe.hs
  build-depends:     base, pkg-oot 

benchmark pkg-oot-bench
  type:              exitcode-stdio-1.0
  main-is:           Exe.hs
  build-depends:     base, pkg-oot 
