name:                proj
version:             0
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  stack.yaml

library
  exposed-modules:   Lib
  build-depends:     base, filepath, directory ,pkg-a,pkg-b,pkg-oot
  default-language:  Haskell2010

executable proj-exe
  main-is:           Exe.hs
  build-depends:     base, proj ,pkg-a,pkg-b,pkg-oot
  default-language:  Haskell2010

test-suite proj-test
  type:              exitcode-stdio-1.0
  main-is:           Exe.hs
  build-depends:     base, proj ,pkg-a,pkg-b,pkg-oot

benchmark proj-bench
  type:              exitcode-stdio-1.0
  main-is:           Exe.hs
  build-depends:     base, proj ,pkg-a,pkg-b,pkg-oot
