name:                pkg-b
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Lib
  build-depends:     base, filepath, directory 
  default-language:  Haskell2010

executable pkg-b-exe
  main-is:           Exe.hs
  build-depends:     base, pkg-b 
  default-language:  Haskell2010

test-suite pkg-b-test
  type:              exitcode-stdio-1.0
  main-is:           Exe.hs
  build-depends:     base, pkg-b 

benchmark pkg-b-bench
  type:              exitcode-stdio-1.0
  main-is:           Exe.hs
  build-depends:     base, pkg-b 
